2018-12-18  Peter Bloomfield  <pbloomfield@bellsouth.net>

	* src/mailbox-conf.c (create_local_mailbox_dialog): avoid
	possibly dereferencing a NULL pointer.

2018-12-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix broken display of expired application/pgp-keys parts

	* libbalsa/libbalsa-gpgme-keys.[hc]: add flag to
	  libbalsa_gpgme_list_keys() for listing expired etc. keys, use
	  the new api w/o allowing expired etc. keys
	* libbalsa/libbalsa-gpgme.c, libbalsa/rfc3156.c: use the new
	  api w/o allowing expired etc. keys
	* src/balsa-mime-widget-crypto.c: use the new api, allowing
	  expired etc. keys


2018-12-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	Fix buffer overflow and missing include

	* libbalsa/folder-scanners.c: fix missing include on old systems
	  which do not indirectly import string.h, remove obsolete macro
	* libbalsa/libbalsa.c: fix one-byte buffer overflow in
	  x509_fingerprint()

2018-12-18  Albrecht Dreß  <albrecht.dress@arcor.de>

	SMTP, POP: fall back to auth w/ password if GSS failed

	* libnetclient/net-client-pop.c, libnetclient/net-client-smtp.c:
	  retry auth with password if GSS auth failed; small performance
	  improvement checking the various auth methods
	* libnetclient/net-client-utils.c: print more (internal) debug
	  info about failed GSS operations, fix nit-picks

2018-12-14  Peter Bloomfield  <pbloomfield@bellsouth.net>

	Stop using GSlice; it may go away

	* libbalsa/mailbox.c (libbalsa_mailbox_search_iter_new): use
	g_new(), not g_slice_new();
	(libbalsa_mailbox_search_iter_unref): use g_free(), not
	g_slice_free().

2018-12-13  Albrecht Dreß  <albrecht.dress@arcor.de>

	Replace readdir() by g_dir_read_name()

	* libbalsa/folder-scanners.c: replace opendir/readdir/closedir
	  by g_dir_*, and refactor functions libbalsa_scanner_mdir()
	  and libbalsa_scanner_local_dir_helper
	* libbalsa/mailbox_imap.c: replace opendir/readdir/closedir
	  by g_dir_*

2018-12-09  Albrecht Dreß  <albrecht.dress@arcor.de>
