@@ -1,3 +1,9 @@
+2019-01-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 2017-09-13  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	reviewed by: <delete if not using a buddy>
