@@ -1,3 +1,15 @@
+2019-01-05  Peter Bloomfield  <pbloomfield@bellsouth.net>
+
+	minor Autocrypt fixes
+
+	* libbalsa/autocrypt.c:
+	  * add missing include, required on Debian stretch
+	  * make sure the ~/.balsa folder exists before initialising
+	    the autocrypt sub-system (otherwise an error is thrown when
+	    balsa is started for the first time)
+	  * clarify debug messages, indicating if a database entry
+	    has actually been changed
+
 2018-12-18  Peter Bloomfield  <pbloomfield@bellsouth.net>
 
 	* src/mailbox-conf.c (create_local_mailbox_dialog): avoid
